@@ -9,6 +9,9 @@ Ipe 7.2.29
 
  * Fix Latex not being run automatically after paste (# 497).
 
+ * Cleanup Qt version of wait dialog (when Latex runs), using an
+   explicit mutex.
+
 ----------------------------------------------------------------------
 
 Ipe 7.2.28 (2023-08-13)
